# GenderAgeClassifier

./: CMakeLists.txt  README.md
data/: genderTrained2000.yaml
include/: ageTrain.h  application.h  faceDetection.h  genderTrain.h
src/: ageTrain.cpp  application.cpp  faceDetection.cpp  genderTrain.cpp  test.cpp
